# financial-agent

./: .gitignore  README.md  example.py  pyproject.toml
financial_agent/: __init__.py  agent.py  data.py  models.py  tools.py
financial_agent/utils/: utils.py
